# shimmy_cloud_agents

./: README.md  pyproject.toml
shimmy_cloud_agents/: .env.example  mock_robot_client.py  server.py
shimmy_cloud_agents/agents/datetime_agent/: agent.py  types.py
shimmy_cloud_agents/agents/search_agent/: agent.py
shimmy_cloud_agents/agents/speech_processor/: agent.py  types.py
shimmy_cloud_agents/agents/stt_subscriber/: agent.py
shimmy_cloud_agents/shared_grpc/: shimmy_interface_pb2.py  shimmy_interface_pb2.pyi
shimmy_cloud_agents/shared_grpc/protos/: shimmy_interface.proto
shimmy_cloud_agents/tools/: datetime_tool.py  grpc_context_manager.py  robot_commands.py
